[package]
name = "hyd-staking"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>", "N-H-Z-T Tech <wuminzhe@wuminzhe.com>"]
edition = "2018"

[dependencies]
hex-literal = "0.1.0"
serde = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false}
parity-codec = { version = "3.2", default-features = false, features = ["derive"] }

[dependencies.substrate-keyring]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-keyring'
rev = 'f2f2994822f4331291597e341798fb6271bb6ef4'
optional = true

[dependencies.rstd]
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = 'f2f2994822f4331291597e341798fb6271bb6ef4'
default-features = false

[dependencies.srml-support]
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'f2f2994822f4331291597e341798fb6271bb6ef4'
default-features = false

[dependencies.system]
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'f2f2994822f4331291597e341798fb6271bb6ef4'
default-features = false

[dependencies.runtime_io]
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'f2f2994822f4331291597e341798fb6271bb6ef4'
default-features = false

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = 'f2f2994822f4331291597e341798fb6271bb6ef4'
default-features = false

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-consensus'
rev = 'f2f2994822f4331291597e341798fb6271bb6ef4'
default-features = false

[dependencies.session]
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-session'
rev = 'f2f2994822f4331291597e341798fb6271bb6ef4'
default-features = false

[dev-dependencies.substrate-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'f2f2994822f4331291597e341798fb6271bb6ef4'
default-features = false

[dev-dependencies.timestamp]
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = 'f2f2994822f4331291597e341798fb6271bb6ef4'
default-features = false

[dependencies.balances]
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = 'f2f2994822f4331291597e341798fb6271bb6ef4'
default-features = false

[features]
default = ["std"]
std = [
	"serde",
	"safe-mix/std",
	"substrate-keyring",
	"parity-codec/std",
	"rstd/std",
	"runtime_io/std",
	"srml-support/std",
	"primitives/std",
	"session/std",
	"system/std",
]
